# 1 - Fix on li spacing

--- a/common/styles/main.css
+++ b/common/styles/main.css
@@ -11,3 +11,7 @@ p.spacer {
     margin: 0px;
     height: 8px;
 }
+
+li:not(:last-child) {
+    margin-bottom: 16px;
+}
